<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_house"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_circle"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_fab"
        android:icon="@drawable/ic_alert"
        android:title="@string/title_fab" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/title_user" />

</menu>
